--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,4 +6,44 @@
     <string name="search_hint">Search Images </string>
     <string name="title_activity_image_display">ImageDisplay</string>
 
+    <string-array name="imgsizes">
+        <item>Any</item>
+        <item>Icon</item>
+        <item>Small</item>
+        <item>Medium</item>
+        <item>Large</item>
+        <item>XLarge</item>
+        <item>XXLarge</item>
+        <item>Huge</item>
+    </string-array>
+    
+    <string-array name="imgcolors">
+        <item>Any</item>
+        <item>Black</item>
+        <item>Blue</item>
+        <item>Brown</item>
+        <item>Gray</item>
+        <item>Green</item>
+        <item>Orange</item>
+        <item>Pink</item>
+        <item>Purple</item>
+        <item>Red</item>
+        <item>Teal</item>
+        <item>White</item>
+        <item>Yellow</item>
+	</string-array>
+     <string-array name="imgtypes">
+         <item>Any</item>
+         <item>Face</item>
+         <item>Photo</item>
+         <item>Clipart</item>
+         <item>Lineart</item>
+     </string-array>
+     <string-array name="imgfileTypes">
+            <item>Any</item>
+            <item>jpg</item>
+            <item>png</item>
+            <item>gif</item>
+            <item>bmp</item>
+     </string-array>
 </resources>
