--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,10 @@
     <string name="app_name">Image Candy</string>
     <string name="search_hint">Search Images </string>
     <string name="title_activity_image_display">Image Display</string>
- 
+ 	<string name="toast_nw_unavailable">Network connection is not available</string>
+ 	<string name="toast_search_in_progress">Searching : </string>
+ 	<string name="toast_file_downloaded_at">File Downloaded at : </string>
+ 	
     <string-array name="imgsizes">
         <item>Any</item>
         <item>Icon</item>
